--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-ga": "^2.3.4",
     "react-image-lightbox": "^4.1.0",
     "react-redux": "4.3.0",
     "react-router": "^2.8.1",
