--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-ga": "^2.3.4",
     "react-image-lightbox": "^4.1.0",
     "react-router-dom": "^4.2.2",
+    "serve-index": "^1.9.1",
     "webpack": "^1.12.9"
   }
 }
